# a2mgr

./: .gitignore  CMakeLists.txt  CRC_32.cpp  File.cpp  Image.cpp  Image.h  README.md  a2mgr.cpp  a2mgr.def  a2mgr.vcproj  add_info.cpp  administrat_fix.cpp  chat.cpp  chat_history.cpp  class_extend.cpp  class_mapobject.cpp  class_mapobject.h  config.cpp  config.h  crash.cpp  debug.cpp  debug.h  gl.h  grid.cpp  gui_bugfix.cpp  gui_replace.cpp  hotkey.cpp  hotkey.h  infotext.cpp  itempng.cpp  landscape_renderer.cpp  landscape_renderer.h  language.cpp  map_location.cpp  menu.cpp  misc.cpp  net_shared.cpp  net_shared.h  network_crypt.cpp  network_hat_enter.cpp  (+19 more)
lib/: ScanrangeCalc.cpp  happyhttp.cpp  happyhttp.h  hat2.cpp  lodepng.cpp  packet.cpp  serialize.cpp  sha1.cpp  socket.cpp  utils.cpp
postbuild/: allods2.mp
postbuild/locale/en/: credits.txt  itemname.txt  main.txt  patch.txt  spells.txt
postbuild/locale/ru/: credits.txt  itemname.txt  patch.txt  spells.txt
postbuild/nsis/data/locale/en/: credits.txt  itemname.txt  main.txt  spells.txt
postbuild/nsis/data/locale/ru/: credits.txt  itemname.txt  spells.txt
postbuild/patches/: p10itm.xck
